--- a/html/Home.html
+++ b/html/Home.html
@@ -94,7 +94,7 @@
         <div class="footer footer--background">
             <div class="footer__container-box">
                 <div class="footer__box">
-                    <p class="footer__title footer__title-style">Vault Tec</p>
+                    <h4 class="footer__title footer__title-style">Vault Tec</h4>
 
                     <p> 17 rue Coustou <br>
                         59000 Lille<br>
