--- a/html/Contact.html
+++ b/html/Contact.html
@@ -42,26 +42,23 @@
     </header>
     <main>
         <div class="container">
+            <div class="head">
+                <p> Contact </p>
+            </div>
             <div class="contact-info">
                 <div class="contact-info__left-side">
                     <div class="info-box">
-                        <div class="icon">
-
-                        </div>
+                        <i class="icon-left fas fa-map-pin"></i>
                         <h4>Adresse</h4>
-                        <p> 134 rue des Templiers, 59000 LILLE <br> FRANCE</p>
+                        <p> 134 rue des Templiers <br> 59000 LILLE <br> FRANCE</p>
                     </div>
                     <div class="info-box">
-                        <div class="icon">
-
-                        </div>
+                        <i class="icon-left fas fa-phone"></i>
                         <h4>Téléphone</h4>
                         <p> 06.06.06.06.06</p>
                     </div>
                     <div class="info-box">
-                        <div class="info-box__icon">
-                            <!-- <i class="fas fa-phone-alt"></i> -->
-                        </div>
+                        <i class="icon-left fas fa-envelope"></i>
                         <h4>Adresse mail</h4>
                         <p> contact@vaulttec.fr</p>
                     </div>
@@ -71,24 +68,30 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="">
-                                    <input type="text" id="inputPassword6" class="testForm form-control" aria-describedby=""
-                                        placeholder="Nom">
+                                    <i class="icon-right fas fa-user"></i>
+                                    <input type="text" id="inputPassword6" class="testForm form-control"
+                                        aria-describedby="" placeholder="Nom">
                                 </div>
                             </div>
-                            <div class="mb-4 ms-5 col-lg-6">
+                            <div class="mb-4 col-lg-8">
                                 <div class="">
+                                    <i class="icon-right fas fa-envelope"></i>
                                     <input type="email" id="" class="testForm form-control" aria-describedby=""
                                         placeholder="Email">
                                 </div>
                             </div>
                         </div>
                         <div class="mb-4 col-auto">
-                            <input type="email" class="testForm form-control" id="" aria-describedby="" placeholder="Sujet">
+                            <i class="icon-right fas fa-bullhorn"></i>
+                            <input type="email" class="testForm form-control" id="" aria-describedby=""
+                                placeholder="Sujet">
                         </div>
                         <div class="mb-4 col-auto">
-                            <textarea class="testForm form-control" id="exampleFormControlTextarea1" rows="7" placeholder="Votre Message"></textarea>
+                            <i class="icon-right fas fa-edit"></i>
+                            <textarea class="testForm form-control" id="exampleFormControlTextarea1" rows="7"
+                                placeholder="Votre Message"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary"> Envoyer </button>
+                        <button type="submit" class="form-btn"> Envoyer </button>
                     </form>
                 </div>
             </div>
