début page team

--- a/html/Contact.html
+++ b/html/Contact.html
@@ -31,7 +31,7 @@
             </div>
             <div class="navbar__right-container">
                 <div class="navbar__navbar-nav">
-                    <a class="navbar__nav-link " href="Acceuil.html"> HOME </a>
+                    <a class="navbar__nav-link " href="Home.html"> HOME </a>
                     <a class="navbar__nav-link " href="Apropos.html"> A PROPOS </a>
                     <a class="navbar__nav-link " href="Services.html"> SERVICES </a>
                     <a class="navbar__nav-link" href="Team.html"> LA TEAM </a>
@@ -41,62 +41,59 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <div class="head">
-                <p> Contact </p>
-            </div>
-            <div class="contact-info">
-                <div class="contact-info__left-side">
-                    <div class="info-box">
-                        <i class="icon-left fas fa-map-pin"></i>
-                        <h4>Adresse</h4>
-                        <p> 134 rue des Templiers <br> 59000 LILLE <br> FRANCE</p>
-                    </div>
-                    <div class="info-box">
-                        <i class="icon-left fas fa-phone"></i>
-                        <h4>Téléphone</h4>
-                        <p> 06.06.06.06.06</p>
-                    </div>
-                    <div class="info-box">
-                        <i class="icon-left fas fa-envelope"></i>
-                        <h4>Adresse mail</h4>
-                        <p> contact@vaulttec.fr</p>
-                    </div>
+        <section>
+            <div class="container">
+                <div class="head">
+                    <p class="head__title"> Contact </p>
                 </div>
-                <div class="contact-info__right-side">
-                    <form>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="">
-                                    <i class="icon-right fas fa-user"></i>
-                                    <input type="text" id="inputPassword6" class="testForm form-control"
-                                        aria-describedby="" placeholder="Nom">
+                <div class="contact-info">
+                    <div class="contact-info__left-side">
+                        <div class="info-box">
+                            <i class="icon-left fas fa-map-pin"></i>
+                            <h4> Adresse </h4>
+                            <p> 134 rue des Templiers <br> 59000 LILLE <br> FRANCE</p>
+                        </div>
+                        <div class="info-box">
+                            <i class="icon-left fas fa-phone"></i>
+                            <h4> Téléphone </h4>
+                            <p> 06.06.06.06.06</p>
+                        </div>
+                        <div class="info-box">
+                            <i class="icon-left fas fa-envelope"></i>
+                            <h4> Adresse mail </h4>
+                            <p> contact@vaulttec.fr </p>
+                        </div>
+                    </div>
+                    <div class="contact-info__right-side">
+                        <form>
+                            <div class="row">
+                                <div class="col-lg-4">
+                                        <i class="icon-right fas fa-user"></i>
+                                        <input type="text" id="inputPassword6" class="testForm form-control"
+                                            aria-describedby="" placeholder="Nom">
+                                </div>
+                                <div class="mb-4 col-lg-8">
+                                        <i class="icon-right fas fa-envelope"></i>
+                                        <input type="email" id="" class="testForm form-control" aria-describedby=""
+                                            placeholder="Email">
                                 </div>
                             </div>
-                            <div class="mb-4 col-lg-8">
-                                <div class="">
-                                    <i class="icon-right fas fa-envelope"></i>
-                                    <input type="email" id="" class="testForm form-control" aria-describedby=""
-                                        placeholder="Email">
-                                </div>
+                            <div class="mb-4 col-auto">
+                                <i class="icon-right fas fa-bullhorn"></i>
+                                <input type="email" class="testForm form-control" id="" aria-describedby=""
+                                    placeholder="Sujet">
                             </div>
-                        </div>
-                        <div class="mb-4 col-auto">
-                            <i class="icon-right fas fa-bullhorn"></i>
-                            <input type="email" class="testForm form-control" id="" aria-describedby=""
-                                placeholder="Sujet">
-                        </div>
-                        <div class="mb-4 col-auto">
-                            <i class="icon-right fas fa-edit"></i>
-                            <textarea class="testForm form-control" id="exampleFormControlTextarea1" rows="7"
-                                placeholder="Votre Message"></textarea>
-                        </div>
-                        <button type="submit" class="form-btn"> Envoyer </button>
-                    </form>
+                            <div class="mb-4 col-auto">
+                                <i class="icon-right fas fa-edit"></i>
+                                <textarea class="testForm form-control" id="exampleFormControlTextarea1" rows="7"
+                                    placeholder="Votre Message"></textarea>
+                            </div>
+                            <button type="submit" class="form-btn"> Envoyer </button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-
+        </section>
     </main>
     <footer>
         <div class="footer footer--background">
