--- a/html/Home.html
+++ b/html/Home.html
@@ -31,7 +31,7 @@
             </div>
             <div class="navbar__right-container">
                 <div class="navbar__navbar-nav">
-                    <a class="navbar__nav-link " href="Acceuil.html"> HOME </a>
+                    <a class="navbar__nav-link " href="Home.html"> HOME </a>
                     <a class="navbar__nav-link " href="Apropos.html"> A PROPOS </a>
                     <a class="navbar__nav-link " href="Services.html"> SERVICES </a>
                     <a class="navbar__nav-link" href="Team.html"> LA TEAM </a>
