--- a/html/Team.html
+++ b/html/Team.html
@@ -6,18 +6,77 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta description="">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="/images/LogoVaultTecTest.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="icon" href="/assets/images/favIcon/LogoVaultTecTest.ico" />
     <title> VAULT TEC </title>
 </head>
 
 <body>
-    <head></head>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav class="navbar navbar-expand-lg light">
+            <div class="navbar__left-container">
+                <div class="navbar__left-info">
+                    <img id="logo-vault-tec" src="/assets/images/site/LogoVaultTecDarkColor.png" alt="logoDuSite">
+                    <p id="slogan"> L'expertise en gestion des accès et des identités. </p>
+                </div>
+            </div>
+            <div class="navbar__right-container">
+                <div class="navbar__navbar-nav">
+                    <a class="navbar__nav-link " href="Home.html"> HOME </a>
+                    <a class="navbar__nav-link " href="Apropos.html"> A PROPOS </a>
+                    <a class="navbar__nav-link " href="Services.html"> SERVICES </a>
+                    <a class="navbar__nav-link" href="Team.html"> LA TEAM </a>
+                    <a class="navbar__nav-link " href="Contact.html"> CONTACT </a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="head">
+                <p class="head__title"> La team VaultTec </p>
+            </div>
+            <div class="container">
+                <div class="team-box">
+                    <div class="cadre-photo">
+                        <div class="photo-team">
+                            <!-- <img src="/images/unnamed.jpg"> -->
+                        </div>
+                    </div>
+                    <div class="photo-text">
+                        <p>
+                            Texte
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer footer--background">
+            <div class="footer__container-box">
+                <div class="footer__box">
+                    <p class="footer__title footer__title-style">Vault Tec</p>
+
+                    <div class="footer__box">
+                        <a><i class="fab fa-linkedin rs--light"></i></a>
+                    </div>
+                </div>
+            </div>
+    </footer>
+    <div id="copyright">
+        <p> Copyright © 2021 VaultTec - Mentions Légales</p>
+    </div>
 </body>
 <html>
