--- a/html/Team.html
+++ b/html/Team.html
@@ -42,20 +42,58 @@
     </header>
     <main>
         <section>
-            <div class="head">
-                <p class="head__title"> La team VaultTec </p>
-            </div>
             <div class="container">
-                <div class="team-box">
-                    <div class="cadre-photo">
-                        <div class="photo-team">
-                            <!-- <img src="/images/unnamed.jpg"> -->
+                <div class="head">
+                    <p class="head__title"> LA TEAM </p>
+                </div>
+                <div class="container team-box">
+                    <div class="box-collab">
+                        <div class="cadre-photo">
+                            <img  class="photo-team" src="/images/Philippe.png">
+                        </div>
+                        <div class="photo-text">
+                            <p class="name"> Philippe </p>
+                            <p class="job"> CEO </p>
+                            <p class="presentation-txt"> C'est moi le patron. <br> 
+                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                            </p>
                         </div>
                     </div>
-                    <div class="photo-text">
-                        <p>
-                            Texte
-                        </p>
+                    <div class="box-collab">
+                        <div class="cadre-photo">
+                            <img  class="photo-team" src="/images/pp.png">
+                        </div>
+                        <div class="photo-text">
+                            <p class="name"> Angélique </p>
+                            <p class="job"> Alternante en Développement Web </p>
+                            <p class="presentation-txt">" Prout <br> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ""
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box-collab">
+                        <div class="cadre-photo">
+                            <img  class="photo-team" src="/images/Laetiti.png">
+                        </div>
+                        <div class="photo-text">
+                            <p class="name"> LAETITIA </p>
+                            <p class="job"> Chef de projet digital </p>
+                            <p class="presentation-txt"> Vive les chatons <br> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box-collab">
+                        <div class="cadre-photo">
+                            <img  class="photo-team" src="/images/unnamed.jpg">
+                        </div>
+                        <div class="photo-text">
+                            <p class="name"> ALEX </p>
+                            <p class="job"> Pièce rapportée  </p>
+                            <p class="presentation-txt"> Vive la soupe aux choux à Tokyo <br> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ""
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
