home modif + service

--- a/html/Contact.html
+++ b/html/Contact.html
@@ -68,14 +68,14 @@
                         <form>
                             <div class="row">
                                 <div class="col-lg-4">
-                                        <i class="icon-right fas fa-user"></i>
-                                        <input type="text" id="inputPassword6" class="testForm form-control"
-                                            aria-describedby="" placeholder="Nom">
+                                    <i class="icon-right fas fa-user"></i>
+                                    <input type="text" id="inputPassword6" class="testForm form-control"
+                                        aria-describedby="" placeholder="Nom">
                                 </div>
                                 <div class="mb-4 col-lg-8">
-                                        <i class="icon-right fas fa-envelope"></i>
-                                        <input type="email" id="" class="testForm form-control" aria-describedby=""
-                                            placeholder="Email">
+                                    <i class="icon-right fas fa-envelope"></i>
+                                    <input type="email" id="" class="testForm form-control" aria-describedby=""
+                                        placeholder="Email">
                                 </div>
                             </div>
                             <div class="mb-4 col-auto">
@@ -99,13 +99,26 @@
         <div class="footer footer--background">
             <div class="footer__container-box">
                 <div class="footer__box">
-                    <p class="footer__title footer__title-style">Vault Tec</p>
+                    <h4 class="footer__title footer__title-style">Vault Tec</h4>
 
-                    <div class="footer__box">
-                        <a><i class="fab fa-linkedin rs--light"></i></a>
-                    </div>
+                    <p> 17 rue Coustou <br>
+                        59000 Lille<br>
+                        France
+                    </p>
+                </div>
+                <div class="footer__box">
+                    <ul>
+                        <li> 06.06.06.06.06 </li>
+                        <li> contact@vaulttec.fr</li>
+                    </ul>
+                    <button type="button" class="btn btn-light btn-lg">Contactez-nous</button>
+                </div>
+
+                <div class="footer__box">
+                    <a><i class="fab fa-linkedin rs--light"></i></a>
                 </div>
             </div>
+        </div>
     </footer>
     <div id="copyright">
         <p> Copyright © 2021 VaultTec - Mentions Légales</p>
