--- a/html/Home.html
+++ b/html/Home.html
@@ -32,7 +32,7 @@
             <div class="navbar__right-container">
                 <div class="navbar__navbar-nav">
                     <a class="navbar__nav-link " href="Home.html"> HOME </a>
-                    <a class="navbar__nav-link " href="Apropos.html"> A PROPOS </a>
+                    <a class="navbar__nav-link " href="About.html"> A PROPOS </a>
                     <a class="navbar__nav-link " href="Services.html"> SERVICES </a>
                     <a class="navbar__nav-link" href="Team.html"> LA TEAM </a>
                     <a class="navbar__nav-link " href="Contact.html"> CONTACT </a>
@@ -46,48 +46,31 @@
             <div class="section section--background-grey">
                 <p class="section__title"> Nos Services </p>
                 <div class="container section__container-box">
-                    <div class="section__service-box">
-                        <h2 class="section__title-box">Lorem Ipsum</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the
-                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type
-                            and scrambled it to make a type specimen book. </p>
+                    <div class="encart__service-box">
+                        <i class="encart__icon-service-box fas fa-shield-alt"></i>
+                        <h2 class="encart__title-box">Service 1</h2>
                     </div>
-                    <div class="section__service-box">
-                        <h2 class="section__title-box">Lorem Ipsum</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the
-                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type
-                            and scrambled it to make a type specimen book. </p>
+                    <div class="encart__service-box">
+                        <i class="encart__icon-service-box fas fa-cogs"></i>
+                        <h2 class="encart__title-box">Services 2</h2>
                     </div>
-                    <div class="section__service-box">
-                        <h2 class="section__title-box">Lorem Ipsum</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the
-                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type
-                            and scrambled it to make a type specimen book. </p>
+                    <div class="encart__service-box">
+                        <i class="encart__icon-service-box fas fa-fingerprint"></i>
+                        <h2 class="encart__title-box"> Services 3 </h2>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="confiance">
+        <section>
             <div class=" section section--background-white">
                 <p class="section__title section__title--dark "> Ils nous font confiance</p>
             </div>
-            <div class="container section__partner">
+            <div class="section__partner">
                 <img class="section__logoPartner" src="/assets/images/site/adeo.jpg" alt="logoAdeo">
                 <img class="section__logoPartner" src="/assets/images/site/logo_giphar.png" alt="logoGiphar">
                 <img class="section__logoPartner" src="/assets/images/site/cognitum.JPG" alt="logoCognitum">
             </div>
+            <div class="btn-temoignage"><a href="#">  Retrouvez les témoignages de nos partenaires</a></div>
         </section>
     </main>
     <footer>
