--- a/html/Team.html
+++ b/html/Team.html
@@ -32,7 +32,7 @@
             <div class="navbar__right-container">
                 <div class="navbar__navbar-nav">
                     <a class="navbar__nav-link " href="Home.html"> HOME </a>
-                    <a class="navbar__nav-link " href="Apropos.html"> A PROPOS </a>
+                    <a class="navbar__nav-link " href="About.html"> A PROPOS </a>
                     <a class="navbar__nav-link " href="Services.html"> SERVICES </a>
                     <a class="navbar__nav-link" href="Team.html"> LA TEAM </a>
                     <a class="navbar__nav-link " href="Contact.html"> CONTACT </a>
@@ -49,49 +49,53 @@
                 <div class="container team-box">
                     <div class="box-collab">
                         <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/Philippe.png">
+                            <img class="photo-team" src="/images/Philippe.png">
                         </div>
                         <div class="photo-text">
                             <p class="name"> Philippe </p>
                             <p class="job"> CEO </p>
-                            <p class="presentation-txt"> C'est moi le patron. <br> 
-                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                            <p class="presentation-txt"> C'est moi le patron. <br>
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. "
                             </p>
                         </div>
                     </div>
                     <div class="box-collab">
                         <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/pp.png">
+                            <img class="photo-team" src="/images/pp.png">
                         </div>
                         <div class="photo-text">
                             <p class="name"> Angélique </p>
                             <p class="job"> Alternante en Développement Web </p>
-                            <p class="presentation-txt">" Prout <br> 
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ""
+                            <p class="presentation-txt">" Prout <br>
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. ""
                             </p>
                         </div>
                     </div>
                     <div class="box-collab">
                         <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/Laetiti.png">
+                            <img class="photo-team" src="/images/Laetiti.png">
                         </div>
                         <div class="photo-text">
                             <p class="name"> LAETITIA </p>
                             <p class="job"> Chef de projet digital </p>
-                            <p class="presentation-txt"> Vive les chatons <br> 
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+                            <p class="presentation-txt"> Vive les chatons <br>
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. "
                             </p>
                         </div>
                     </div>
                     <div class="box-collab">
                         <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/unnamed.jpg">
+                            <img class="photo-team" src="/images/unnamed.jpg">
                         </div>
                         <div class="photo-text">
                             <p class="name"> ALEX </p>
-                            <p class="job"> Pièce rapportée  </p>
-                            <p class="presentation-txt"> Vive la soupe aux choux à Tokyo <br> 
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ""
+                            <p class="job"> Pièce rapportée </p>
+                            <p class="presentation-txt"> Vive la soupe aux choux à Tokyo <br>
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. ""
                             </p>
                         </div>
                     </div>
@@ -105,13 +109,26 @@
         <div class="footer footer--background">
             <div class="footer__container-box">
                 <div class="footer__box">
-                    <p class="footer__title footer__title-style">Vault Tec</p>
+                    <h4 class="footer__title footer__title-style">Vault Tec</h4>
 
-                    <div class="footer__box">
-                        <a><i class="fab fa-linkedin rs--light"></i></a>
-                    </div>
+                    <p> 17 rue Coustou <br>
+                        59000 Lille<br>
+                        France
+                    </p>
+                </div>
+                <div class="footer__box">
+                    <ul>
+                        <li> 06.06.06.06.06 </li>
+                        <li> contact@vaulttec.fr</li>
+                    </ul>
+                    <button type="button" class="btn btn-light btn-lg">Contactez-nous</button>
+                </div>
+
+                <div class="footer__box">
+                    <a><i class="fab fa-linkedin rs--light"></i></a>
                 </div>
             </div>
+        </div>
     </footer>
     <div id="copyright">
         <p> Copyright © 2021 VaultTec - Mentions Légales</p>
